--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "jsonServer": "json-server --watch src/app/cars/data/backend/db.json"
   },
   "private": true,
   "dependencies": {
